fix: remove alternative fonts and fix geometry gaps

--- a/styles/global.css
+++ b/styles/global.css
@@ -5,7 +5,6 @@
 }
 
 html {
-  /* УДАЛЕНО: sans-serif */
   font-family: 'Raleway';
 }
 
@@ -25,7 +24,8 @@ h6,
 p,
 ul,
 ol,
-li {
+li,
+blockquote {
   margin: 0;
   padding: 0;
 }
