--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,37 @@
 body {
   width: 1100px;
   margin: 0 auto;
-  font-family: 'Raleway'; /* ТОЛЬКО Raleway */
-  color: #000;
-  background-color: #fff;
-}
-
-.address {
   font-family: 'Raleway';
-  font-style: normal;
-  font-size: 18px;
-  line-height: 1.4;
+  background-color: #fff;
+  color: #000;
+  -webkit-font-smoothing: antialiased;
 }
 
-/* HEADER */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+li {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .header {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
@@ -23,6 +41,8 @@ body {
 
 .header__menu-list {
   display: flex;
+  list-style: none;
+  align-items: center;
   gap: 32px;
 }
 
@@ -31,7 +51,7 @@ body {
 }
 
 .header__menu-item:not(:last-child)::after {
-  content: "•";
+  content: '•';
   position: absolute;
   right: -20px;
 }
@@ -41,10 +61,12 @@ body {
 }
 
 .header__address {
+  font-style: normal;
+  font-size: 18px;
+  line-height: 1.4;
   justify-self: end;
 }
 
-/* COVER */
 .cover {
   position: relative;
   background-image: url(../images/cover.jpg);
@@ -79,8 +101,7 @@ body {
 .aligned-text {
   display: block;
   letter-spacing: 0.3em;
-  /* Компенсируем letter-spacing последней буквы, чтобы текст не косило */
-  margin-right: -0.3em; 
+  margin-right: -0.3em;
 }
 
 .aligned-text_center {
@@ -111,12 +132,12 @@ body {
   border: 1px solid #fff;
   color: #fff;
   padding: 12px 31px;
+  font-family: inherit;
   font-size: 22px;
   cursor: pointer;
   text-transform: uppercase;
 }
 
-/* LOTS */
 .lots {
   padding: 180px 50px 0;
 }
@@ -132,6 +153,7 @@ body {
   display: flex;
   justify-content: space-between;
   gap: 25px;
+  list-style: none;
 }
 
 .lots__card-list-item {
@@ -146,14 +168,22 @@ body {
   justify-content: space-between;
   height: 100%;
   padding: 50px 40px;
-  color: #fff;
   background-size: cover;
   background-position: center;
+  color: #fff;
 }
 
-.card_type_film { background-image: url(../images/card-lot-01.jpg); }
-.card_type_book { background-image: url(../images/card-lot-02.jpg); }
-.card_type_picture { background-image: url(../images/card-lot-03.jpg); }
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
 
 .card__title {
   font-size: 22px;
@@ -170,25 +200,18 @@ body {
 }
 
 .lots__look-more-link {
-  display: block;
-  font-size: 20px;
+  display: inline-block;
   margin-top: 30px;
-  padding-left: 65px;
+  font-size: 20px;
   text-decoration: underline;
+  padding-left: 65px;
 }
 
-/* ABOUT */
 .about {
   display: grid;
   grid-template-columns: 334px 1fr;
   padding: 180px 50px;
   gap: 30px;
-}
-
-.about__column_type_logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .about__logo {
@@ -199,6 +222,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 auto;
 }
 
 .about__logo-image {
@@ -217,7 +241,6 @@ body {
   margin-bottom: 25px;
 }
 
-/* FOOTER */
 .footer {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
@@ -227,13 +250,25 @@ body {
 
 .footer__menu-list {
   display: flex;
+  list-style: none;
   gap: 32px;
+}
+
+.footer__menu-list li {
+  position: relative;
+}
+
+.footer__menu-list li:not(:last-child)::after {
+  content: '•';
+  position: absolute;
+  right: -20px;
 }
 
 .footer__social-list {
   display: flex;
   gap: 16px;
-  justify-self: end;
+  justify-content: flex-end;
+  list-style: none;
 }
 
 .footer__social-link {
@@ -244,4 +279,9 @@ body {
   height: 48px;
   border: 1px solid #000;
   border-radius: 50%;
+}
+
+.footer__social-icon {
+  width: 24px;
+  height: 24px;
 }
